--- a/.env.yaml
+++ b/.env.yaml
@@ -2,9 +2,13 @@ env : 'dev' # dev or prod , dev ( Development mode ) , prod ( production mode ),
 system :
  url : "https://domain.com" #domain name URL 
  controllers : "controllers" #controllers  folder
- debug : true # debug enable or disable ( will print out all available system logs )
+ debug : true # debug enable or disable ( will print out all available system activities )
 route :
     404 : "/404" # Full route for 404 page
 cache :
  file : "var/cache" #cache folder 
- enabled : false #enable or disable caching , do disable caching set to (false)
+ enabled : false #enable or disable caching , to disable caching set to (false)
+logs :
+ exceptions : "var/logs/exceptions.txt" 
+ errors     : "var/logs/errors.txt"
+ mysql      : "var/logs/mysql.txt"
