--- a/.env.yaml
+++ b/.env.yaml
@@ -1,13 +1,18 @@
-env : 'dev' # dev or prod , dev ( Development mode ) , prod ( production mode ), switch to prod once you go online
+prod : false #  ( Development mode ) | ( production mode ), switch to prod once you go online
+debug : true # debug enable or disable ( will print out all available system activities ), will be disabled by default if 'prod' is true
 system :
  url : "https://domain.com" #domain name URL 
  controllers : "controllers" #controllers  folder
- debug : true # debug enable or disable ( will print out all available system activities )
 route :
     404 : "/404" # Full route for 404 page
 cache :
- file : "var/cache" #cache folder 
- enabled : false #enable or disable caching , to disable caching set to (false)
+ file : 
+     enabled : false #enable or disable caching files which located in "var/cache" 
+ memcached : 
+     enabled : true
+     ruote_ttl : 3600 #number of seconds to cache route ( visited routes will update there expire time again )
+     servers : #array of servers for memcached
+        - { weight : 1 , server : 'localhost',  port : 11211 } 
 logs :
  exceptions : "var/logs/exceptions.txt" 
  errors     : "var/logs/errors.txt"
