--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "phptree/core": "dev-main"
     },
     "license": "MIT",
+    "autoload": {
+        "classmap": ["lib/"]
+    },
     "authors": [
         {
             "name": "PHPTree ( support )",
