added redis to .env

--- a/.env.yaml
+++ b/.env.yaml
@@ -1,19 +1,28 @@
-prod : false #  ( Development mode ) | ( production mode ), switch to prod once you go online
+prod : false #  ( Development mode ) | ( production mode ), switch to prod once you go online to cache .env file
 debug : true # debug enable or disable ( will print out all available system activities ), will be disabled by default if 'prod' is true
 system :
- url : "https://domain.com" #domain name URL 
- controllers : "controllers" #controllers  folder
+  url : "https://domain.com" #domain name URL 
+controller : 
+  dir : "controllers" #controllers folder 
+  prefix : "controller_" #controller file prefix example controller_homepage.php file should start with controller_
+  cacheType: 0 # 1 files , 2 redis , 3 memcached, 0 disabled
 route :
-    404 : "/404" # Full route for 404 page
+  404 : "/404" # Full route for 404 page
+  cacheType: 0 # 1 files , 2 redis , 3 memcached, 0 disabled
 cache :
  file : 
-     enabled : false #enable or disable caching files which located in "var/cache" 
+    enabled : false #enable or disable caching files which located in "var/cache" 
+ redis :
+    enabled : true
+    port : 6379 
+    server : "127.0.0.1"
+    timeout : 3600
  memcached : 
-     enabled : true
-     ruote_ttl : 3600 #number of seconds to cache route ( visited routes will update there expire time again )
-     servers : #array of servers for memcached
-        - { weight : 1 , server : 'localhost',  port : 11211 } 
+    enabled : true
+    routes_ttl : 84600 #number of seconds to cache routes 
+    servers : #array of servers for memcached
+       - { weight : 1 , server : 'localhost',  port : 11211 } 
 logs :
- exceptions : "var/logs/exceptions.txt" 
- errors     : "var/logs/errors.txt"
- mysql      : "var/logs/mysql.txt"
+  exceptions : "var/logs/exceptions.txt" 
+  errors     : "var/logs/errors.txt"
+  mysql      : "var/logs/mysql.txt"
